Tons of tweaks, fix red text in build output, align with core (and renaming GitHub repository to use dash as opposed to underscore), and version bump activities